fix/alignment

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -46,7 +46,7 @@
 .titleRight2 {
   /* background-color: #40D9EA; */
   /* transform: skewY(20deg); */
-  width: 115vh;
+  width: 50%;
   clip-path: polygon(32% 0, 100% 0, 100% 100%, 0% 100%);
   background-image: url("../public/ellipse");
   background-repeat: no-repeat;
@@ -57,7 +57,7 @@
 .titleRight2 {
   clip-path: polygon(3% 0, 100% 0, 100% 100%, 3% 100%);
   margin-left: 0;
-  left: -10px;
+  left: -20px;
   background-color: #40d9ea;
   background-size: 150%;
   transition: 1500ms;
@@ -97,4 +97,16 @@
   position: "absolute";
   right: 20px;
   bottom: 10px;
+}
+
+@media only screen and (max-width: 900px) {
+  .titleLeft,
+  .titleRight {
+    font-size: 15px;
+    letter-spacing: 15px;
+  }
+
+  .titleRight2 {
+    margin-right: 10px;
+  }
 }
